--- a/config
+++ b/config
@@ -16,7 +16,7 @@ font pango:Terminus 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-exec --no-startup-id feh --bg-scale /home/erogers/Pictures/wallpapers/daftpunk.jpg
+exec --no-startup-id feh --bg-scale /home/erogers/Pictures/wallpapers/ocean.jpg
 
 
 # start a terminal
@@ -122,6 +122,7 @@ bindsym $mod+Shift+R restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+E exit
 
+bindsym $mod+Shift+- exec scrot
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -189,10 +190,12 @@ bar {
 	position	top
 	workspace_buttons yes
          colors {
-                statusline #AAAAAA
-                background #333333
-                focused_workspace $gray2 $gray2 #FFFFFF
-                inactive_workspace $gray1 $gray1 #AAAAAA
+                background #101010
+	            statusline #605c5a
+	            focused_workspace   #101010 #101010 #e04614
+	            active_workspace    #5f5f5f #101010 #101010
+	            inactive_workspace  #101010 #101010 #5f5f5f
+	   	    	urgent_workspace    #2e3436 #E04614
         }
 }
 #exec conky -c ~/Scripts/github_dotfiles/smlb_dotfiles/.conkyrc
