--- a/config
+++ b/config
@@ -21,17 +21,17 @@ exec --no-startup-id feh --bg-scale /home/erogers/Pictures/wallpapers/ocean.jpg
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-
 bindsym $mod+Return exec urxvt
 
+#file manager
 bindsym $mod+Shift+f exec pantheon-files
 
 # kill focused window
 bindsym $mod+Shift+Q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -fn  "Terminus-9" -nb "#101010" -nf "#5f5f5f" -sb "#101010" -sf "#e04614"
 
 
 #volume
@@ -120,9 +120,13 @@ bindsym $mod+Shift+C reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+R restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+E exit
+#bindsym $mod+Shift+E exit
+bindsym $mod+Shift+E exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-bindsym $mod+Shift+- exec scrot
+
+new_window none
+new_float normal
+
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -183,19 +187,16 @@ client.unfocused          $gray2   $gray2   #FFFFFF   #000000
 # finds out, if available)
 bar {
         #status_command i3status
-        #i3bar_command i3bar
-        #status_command ~/Scripts/github_configs/smlb_dotfiles/.conky-i3.sh
-        #status_command ~/Scripts/i3barconky
         status_command py3status
-	position	top
-	workspace_buttons yes
+    	position	top
+    	workspace_buttons yes
+        font pango:Terminus 9
          colors {
                 background #101010
 	            statusline #605c5a
 	            focused_workspace   #101010 #101010 #e04614
-	            active_workspace    #5f5f5f #101010 #101010
+	            active_workspace    #101010 #101010 #5f5f5f
 	            inactive_workspace  #101010 #101010 #5f5f5f
 	   	    	urgent_workspace    #2e3436 #E04614
         }
 }
-#exec conky -c ~/Scripts/github_dotfiles/smlb_dotfiles/.conkyrc
